--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 body {
-    font: 16px Arial, sans-serif;
+  font: 14px Quicksand, sans-serif;
+}
+h1,
+h2,
+h3,
+h4 {
 }
 h1 {
-    color: red;
+  font-size: 48px;
+}
+h2 {
+  font-size: 24px;
+}
+h3 {
+  font-weight: bold;
+}
+h4 {
+}
+main {
+  max-width: 600px;
+  margin: auto;
+  text-align: center;
 }
